# serializer version: 1
# name: test_get[json]
  dict({
    'created_at': str,
    'description': '',
    'id': 1,
    'latest_release': dict({
      'created_at': str,
      'github_url': 'http://www.woodward.com/',
      'id': 1,
      'name': 'yLdJCGRddpwdyFKunVyU',
      'published_at': '2017-06-24T08:30:54Z',
      'ready': False,
      'size': 3332,
    }),
    'name': 'ml-plant-viruses',
    'release_count': 3,
    'releases': list([
      dict({
        'created_at': str,
        'github_url': 'http://www.woodward.com/',
        'id': 1,
        'name': 'yLdJCGRddpwdyFKunVyU',
        'published_at': '2017-06-24T08:30:54Z',
        'ready': False,
        'size': 3332,
      }),
      dict({
        'created_at': str,
        'github_url': 'https://williams-carson.biz/',
        'id': 2,
        'name': 'jZGeLZuJqlLaQBfgHToY',
        'published_at': '2002-05-14T05:42:59Z',
        'ready': False,
        'size': 6499,
      }),
      dict({
        'created_at': str,
        'github_url': 'https://garcia.info/',
        'id': 3,
        'name': 'rPQggzbrJiiDPZeQkluf',
        'published_at': '2000-07-10T15:05:18Z',
        'ready': False,
        'size': 8005,
      }),
    ]),
  })
# ---
# name: test_list[json]
  dict({
    'items': list([
      dict({
        'created_at': str,
        'description': '',
        'id': 2,
        'latest_release': dict({
          'created_at': str,
          'github_url': 'https://www.winters.info/',
          'id': 5,
          'name': 'nbBDTlOUGABAXhUvefdv',
          'published_at': '2019-12-20T14:41:04Z',
          'ready': False,
          'size': 503,
        }),
        'name': 'ml-insect-viruses',
        'release_count': 3,
      }),
      dict({
        'created_at': str,
        'description': '',
        'id': 1,
        'latest_release': dict({
          'created_at': str,
          'github_url': 'http://www.woodward.com/',
          'id': 1,
          'name': 'yLdJCGRddpwdyFKunVyU',
          'published_at': '2017-06-24T08:30:54Z',
          'ready': False,
          'size': 3332,
        }),
        'name': 'ml-plant-viruses',
        'release_count': 3,
      }),
    ]),
    'last_synced_at': None,
  })
# ---
